# MINI-SHOP-DB

./: .dockerignore  .env.example  .env.test  .env.test.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.test.yaml  docker-compose.test.yml  docker-compose.yml  main.py  prestart.sh  pyproject.toml  ruff_errors.txt  test.html  test_fastapi.py  test_pydantic.py
backend/: Dockerfile  Dockerfile.test  alembic.ini  fix_db.py  prestart.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_05_1647-5d337b24f67e_first_revision_only_table_creation.py  2026_06_07_0508-7dfd77909271_add_order_items_table.py  2026_06_07_1107-ca6d1c27b59a_add_total_price_orders_table.py  2026_06_08_0019-941c9f018511_remove_unused_relationships.py  2026_06_09_2344-92fe2aa017f6_add_is_active_columns.py  2026_06_10_1629-2f60482a0afe_add_unique_constaint_for_users_table.py  2026_06_10_2351-132dadcdbf30_add_timezone_true_for_orders_and_.py  2026_06_11_1253-ddd921e9617f_add_role_for_users_table.py  2026_06_12_1908-a8e4220af9be_.py  2026_06_14_1255-0550f5ec1f12_fix_weights_on_products_table_fts.py  2026_06_14_1752-fa2a1e9b8aa5_add_image_column_for_products_table.py  2026_06_15_2124-137d8c1521c9_add_payments_table.py  2026_07_18_0109-10c80f28c7dc_initial.py
backend/app/: database.py  handlers.py  settings.py
backend/app/core/: settings.py
backend/app/db/: database.py
backend/app/media/: __init__.py  product_media.py
backend/app/models/: __init__.py  categories.py  email.py  enums.py  order.py  (+3 more)
backend/nginx/: nginx.conf
backend/tests/: conftest.py
(+179 files in other folders)
