[project]
name = "mini-shop-db"
version = "0.1.0"
description = "Python + PostgreSQL connect project with shop idea"
authors = [
    {name = "Alex",email = "doaks1638@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    'psycopg[binary]>3.0',
    'dotenv'
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
