[project]
name = "mini-shop-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'dotenv',
    "pydantic-settings>=2.14.1",
    "fastapi>=0.136.3",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
]
