[project]
name = "mini-shop-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'dotenv',
    "pydantic-settings>=2.14.1",
    "fastapi>=0.136.3",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.50",
    "alembic>=1.18.4",
    "ruff>=0.15.16",
    "uvicorn>=0.49.0",
    "uuid6>=2025.0.1",
    "pyjwt>=2.13.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "python-multipart>=0.0.32",
    "fastapi-sso>=0.21.0",
    "yookassa>=3.10.1",
    "gunicorn>=26.0.0",
    "loguru>=0.7.3",
]

[tool.ruff.lint]
ignore = ["E712"]
